add css and text

--- a/index.html
+++ b/index.html
@@ -1,64 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+     <link rel="stylesheet" href="./css/style.css">
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Team</title>
 </head>
+
 <body>
-<!-- inizio header con h1 -->
-     <header>
-          <h1></h1>
-     </header>
-<!-- //inizio header con h1 -->
-     <main>
-<!-- section con paragrafo  -->
-          <section>
-               <p></p>
-          </section>
-<!-- //section con paragrafo  -->
-
-<!-- section con cards -->
-          <section>
-<!-- section Marco -->
+     <div class="container1">
+          <!-- inizio header con h1 -->
+          <header>
+               <h1>Meet Our Team</h1>
+          </header>
+          <!-- //inizio header con h1 -->
+          <main>
+               <!-- section con paragrafo  -->
                <section>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, sit, nesciunt incidunt quia ullam maxime necessitatibus inventore quod dolorum qui repudiandae dicta veniam voluptatem soluta rem, perspiciatis dignissimos minima obcaecati?</p>
+               </section>
+               <!-- //section con paragrafo  -->
+
+               <!-- section con cards -->
+               <section>
+                    <!-- section Marco -->
+                    <section class="member">
+                         <picture>
+                              <img src="./img/male1.png" alt="Marco ">
+                         </picture>
+                         <section class="dati">
+                              <h3>Marco Bianchi</h3>
+                              <p>Desainer</p>
+                              <p class="mail">marcobianchi@gmail.com</p>
+                         </section>
+                    </section>
+                    <!-- //section Marco -->
+
+                    <!-- section Laura -->
+                    <section class="member">
+                         <picture>
+                              <img src="./img/female1.png" alt="Laura ">
+                         </picture>
+                         <section class="dati">
+                              <h3>Laura Rossi</h3>
+                              <p>Front-end Developer</p>
+                              <p class="mail">laurarossi@gmail.com</p>
+                         </section>
+                    </section>
+                    <!-- //section Laura -->
+
+                    <!-- section Giorgio -->
+                    <section class="member">
+                         <picture>
+                              <img src="./img/male2.png" alt="Giorgio">
+                         </picture>
+                         <section class="dati">
+                              <h3>Giorgio Verdi</h3>
+                              <p>Back-end Developer</p>
+                              <p class="mail">giorgioverdi@gmail.com</p>
+                         </section>
+                    </section>
+                    <!-- //section Giorgio -->
+
+                    <!-- section Marta -->
+                    <section class="member">
+                         <picture>
+                              <img src="./img/female2.png" alt="Marta">
+                         </picture>
+                         <section class="dati">
+                              <h3>Marta Ipsum</h3>
+                              <p>SEO Specialist</p>
+                              <p class="mail">martaipsum#gmail.com</p>
+                         </section>
+                    </section>
+                    <!-- //section Marta -->
+
+                    <!-- section Roberto -->
+                    <section class="member">
+                         <picture>
+                              <img src="./img/male3.png" alt="Roberto">
+                         </picture>
+                         <section class="dati">
+                              <h3>Robero Lrem</h3>
+                              <p>Project Manager</p>
+                              <p class="mail">robertolorem@gmail.com</p>
+                         </section>
+                    </section class="member">
+                    <!-- //section Roberto -->
+
+                    <!-- section Daniela -->
+                    <section class="member">
+                         <picture>
+                              <img src="./img/male3.png" alt="Daniela">
+                         </picture>
+                         <section class="dati"> 
+                              <h3>Daniela Amet</h3>
+                              <p>Analyst</p>
+                              <p class="mail">danielaamet@gmail.com</p>
+                         </section>
+                    </section>
+                    <!-- //section Daniela -->
 
                </section>
-<!-- //section Marco -->
-
-<!-- section Laura -->
-               <section>
-
-               </section>
-<!-- //section Laura -->ù
-
-<!-- section Giorgio -->
-               <section>
-
-               </section>
-<!-- //section Giorgio -->
-               
-<!-- section Marta -->
-               <section>
-
-               </section>
-<!-- //section Marta -->
-
-<!-- section Roberto -->
-               <section>
-
-               </section>
-<!-- //section Roberto -->
-
-<!-- section Daniela -->
-               <section>
-
-               </section>
-<!-- //section Daniela -->
-          </section>
-<!-- //section con cards -->
-     </main>
-     
+               <!-- //section con cards -->
+          </main>
+     </div>
 </body>
+
 </html>
