add comment and fix indentation

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="./css/style.css">
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +22,9 @@
           <main>
                <!-- section con paragrafo  -->
                <section>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, sit, nesciunt incidunt quia ullam maxime necessitatibus inventore quod dolorum qui repudiandae dicta veniam voluptatem soluta rem, perspiciatis dignissimos minima obcaecati?</p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, sit,
+                         nesciunt incidunt quia ullam maxime necessitatibus inventore quod dolorum qui repudiandae dicta
+                         veniam voluptatem soluta rem, perspiciatis dignissimos minima obcaecati?</p>
                </section>
                <!-- //section con paragrafo  -->
 
@@ -95,7 +100,7 @@
                          <picture>
                               <img src="./img/male3.png" alt="Daniela">
                          </picture>
-                         <section class="dati"> 
+                         <section class="dati">
                               <h3>Daniela Amet</h3>
                               <p>Analyst</p>
                               <p class="mail">danielaamet@gmail.com</p>
