--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
           <main>
                <!-- section con paragrafo  -->
                <section>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, sit,
-                         nesciunt incidunt quia ullam maxime necessitatibus inventore quod dolorum qui repudiandae dicta
-                         veniam voluptatem soluta rem, perspiciatis dignissimos minima obcaecati?</p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque perferendis iusto placeat ipsum quaerat reiciendis nisi est incidunt quas hic aspernatur tenetur sunt repellat illo fuga ratione nesciunt vel illum, delectus provident repudiandae totam. Dicta, voluptas?</p>
                </section>
                <!-- //section con paragrafo  -->
 
@@ -36,7 +34,7 @@
                               <img src="./img/male1.png" alt="Marco ">
                          </picture>
                          <section class="dati">
-                              <h3>Marco Bianchi</h3>
+                              <h3>MARCO BIANCHI</h3>
                               <p>Desainer</p>
                               <p class="mail">marcobianchi@gmail.com</p>
                          </section>
@@ -49,7 +47,7 @@
                               <img src="./img/female1.png" alt="Laura ">
                          </picture>
                          <section class="dati">
-                              <h3>Laura Rossi</h3>
+                              <h3>LAURA ROSSI</h3>
                               <p>Front-end Developer</p>
                               <p class="mail">laurarossi@gmail.com</p>
                          </section>
@@ -62,7 +60,7 @@
                               <img src="./img/male2.png" alt="Giorgio">
                          </picture>
                          <section class="dati">
-                              <h3>Giorgio Verdi</h3>
+                              <h3>GIORGIO VERDI</h3>
                               <p>Back-end Developer</p>
                               <p class="mail">giorgioverdi@gmail.com</p>
                          </section>
@@ -75,7 +73,7 @@
                               <img src="./img/female2.png" alt="Marta">
                          </picture>
                          <section class="dati">
-                              <h3>Marta Ipsum</h3>
+                              <h3>MARTA IPSUM</h3>
                               <p>SEO Specialist</p>
                               <p class="mail">martaipsum#gmail.com</p>
                          </section>
@@ -88,7 +86,7 @@
                               <img src="./img/male3.png" alt="Roberto">
                          </picture>
                          <section class="dati">
-                              <h3>Robero Lrem</h3>
+                              <h3>ROBERTO LOREM</h3>
                               <p>Project Manager</p>
                               <p class="mail">robertolorem@gmail.com</p>
                          </section>
@@ -101,7 +99,7 @@
                               <img src="./img/male3.png" alt="Daniela">
                          </picture>
                          <section class="dati">
-                              <h3>Daniela Amet</h3>
+                              <h3>DANIELA AMET</h3>
                               <p>Analyst</p>
                               <p class="mail">danielaamet@gmail.com</p>
                          </section>
