fix. . member and fi x .badge-sec

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                <!-- //section con paragrafo  -->
 
                <!-- section con cards -->
-               <section>
+               <section class="badge-sec">
                     <!-- section Marco -->
                     <section class="member">
                          <picture>
