--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-     <div class="container1">
+     <div class="container">
           <!-- inizio header con h1 -->
           <header>
                <h1>Meet Our Team</h1>
@@ -90,7 +90,7 @@
                               <p>Project Manager</p>
                               <p class="mail">robertolorem@gmail.com</p>
                          </section>
-                    </section class="member">
+                    </section>
                     <!-- //section Roberto -->
 
                     <!-- section Daniela -->
